public/v/release-3.2/_sources/getting_started/hardware_setup/sensors/realsense_setup.rst.txt
=========================
Isaac ROS RealSense Setup
=========================

Camera Compatibility
--------------------

================= ==============
RealSense Model   Supported?
================= ==============
D455              ✓
D435i             ✓
D415              ✗
================= ==============

.. note::

  It is required to use RealSense firmware `version 5.13.0.50 <https://dev.intelrealsense.com/docs/firmware-releases>`__,
  `librealsense SDK` `version 2.55.1 <https://github.com/IntelRealSense/librealsense/releases/tag/v2.55.1>`__
  and `realsense-ros` driver `version 4.51.1-isaac <https://github.com/NVIDIA-ISAAC-ROS/realsense-ros/tree/release/4.51.1-isaac>`__.
  **Any deviation from these versions will break Isaac ROS examples.**

.. note::

  The correct versions of the `librealsense SDK` and the `realsense-ros` driver are automatically installed in the docker container
  when specifying the RealSense image key as explained in the :ref:`Setup Instructions <setup-instructions>`.

.. note::

    For best results we suggest increasing the maximum Linux kernel receive buffer size as
    detailed `here <https://docs.ros.org/en/rolling/How-To-Guides/DDS-tuning.html#cyclone-dds-tuning>`__.

.. note::

    The ``realsense-viewer`` tool has performance issues when running multiple cameras on the Jetson platforms. However the RealSense ROS drivers work fine with multiple cameras.

.. _setup-instructions:

Setup Instructions
------------------

.. note::

  This tutorial assumes that you have completed the instructions in :doc:`Developer Environment Setup </getting_started/dev_env_setup>`.

1. Plug in your RealSense camera before launching the Docker container in the next step.

2. Clone ``isaac_ros_common`` under ``${ISAAC_ROS_WS}/src``.

   .. code:: bash

      cd ${ISAAC_ROS_WS}/src && \
         git clone :ir_clone:`<isaac_ros_common>`

3. Configure the container created by ``isaac_ros_common/scripts/run_dev.sh`` to include RealSense packages.
   Add the ``CONFIG_IMAGE_KEY`` to include ``librealsense SDK`` and ``realsense-ros`` in Isaac ROS Dev Docker.
   Create the ``.isaac_ros_common-config`` file in the ``isaac_ros_common/scripts`` directory:

  .. code:: bash

    cd ${ISAAC_ROS_WS}/src/isaac_ros_common/scripts && \
    touch .isaac_ros_common-config && \
    echo CONFIG_IMAGE_KEY=ros2_humble.realsense > .isaac_ros_common-config

4. Launch the Docker container:

  .. code:: bash

    cd ${ISAAC_ROS_WS}/src/isaac_ros_common && \
    ./scripts/run_dev.sh -d ${ISAAC_ROS_WS}

  This rebuilds the container image using ``Dockerfile.realsense`` in one of its layered stages. Rebuilding can take several minutes.

5. After the container image is rebuilt and you are inside the container, you can run ``realsense-viewer`` to verify that the RealSense camera is connected.

  .. note::

      The ``realsense-viewer`` tool requires a graphical environment, to use it you must connect the host to a monitor, use a remote desktop connection or similar.

  .. code:: bash

    realsense-viewer

  If you turn on the "Stereo Module" in the GUI, you should see something like the following:


.. figure:: :ir_lfs:`<resources/isaac_ros_docs/getting_started/realsense_viewer.png>`
   :align: center
